# adrakestory

./: .gitignore  AGENTS.md  Cargo.toml  DEBUG_SETUP.md  MAP_LOADER_DESIGN.md  README.md  settings.ron  test_normalize.rs
.obsidian/: workspace.json
.roo/: mcp.json
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
assets/maps/: default - Copy.ron  default.ron  simple_test.ron  test_negative_coords.ron  village_64x64.ron
assets/shaders/: occlusion_material.wgsl  occlusion_material_prepass.wgsl
docs/: CHANGELOG.md  CLEANUP_SUMMARY.md  DOCUMENTATION_AUDIT.md  README.md  REORGANIZATION_SUMMARY.md
docs/api/: map-format-analysis.md  map-format-spec.md
docs/archive/: MAP_LOADER_USAGE.md  OPEN_FUNCTION_FIX.md  README.md  README_MAP_LOADER.md
docs/bugs/: 2026-03-15-2141-camera-lerp-visual-lag.md  2026-03-15-2141-interior-detection-frame-spikes.md  2026-03-15-2141-occlusion-material-gpu-reupload-every-frame.md  2026-03-15-2141-p4-lod-all-chunks-iterated-every-frame.md  2026-03-16-1213-p3-interior-detection-hashset-rebuild-on-hot-reload.md  2026-03-16-1213-p3-occlusion-fragment-shader-all-visible-chunks.md  2026-03-16-1213-p4-occlusion-systems-run-in-all-game-states.md  2026-03-16-1310-p2-chunk-mesh-missing-not-shadow-caster.md  2026-03-16-1310-p3-orphaned-voxel-marker-entities.md
docs/developer-guide/: architecture.md  character-model-implementation.md  clippy-warnings-backlog.md  coding-guardrails.md  coding-style.md  (+5 more)
src/: components.rs  lib.rs  main.rs  resources.rs  states.rs
(+434 files in other folders)
