[package]
name = "adrakestory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adrakestory"
path = "src/main.rs"

[[bin]]
name = "map_editor"
path = "src/bin/map_editor/main.rs"

[dependencies]
bevy = { version = "0.15", features = ["bevy_gltf"] }
bevy_egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
thiserror = "1.0"
rfd = "0.15"
dirs = "5.0"
notify = "6.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3